--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,19 +1,23 @@
-header{
-    height: 25%;
-    & .dropdown{
-        position: relative;
-        height: 5em;
-        width: 5em;
-        & .bar{
-            position: absolute;
-            width: 50px;
-            height: 3px;
-            color: black;
-        }
-    }
-
-}
-
 body{
     background-color: aquamarine;
+    & header{
+    height: 25%;
+    display: flex;
+    justify-content: flex-end;
+    & .dropdown{
+            position: relative;
+            height: 40px;
+            width: 3em;
+
+            & .bar{
+                position: absolute;
+                width: 100%;
+                height: 3px;
+                background-color: black;
+                border-radius: 2px;
+            }
+        }
+    
+    }
 }
+
