--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,13 +1,21 @@
+html{
+    margin: 0;
+}
+
 body{
-    background-color: aquamarine;
+  
     & header{
     height: 25%;
-    display: flex;
-    justify-content: flex-end;
+    position: relative;
     & .dropdown{
-            position: relative;
+            position: absolute;
+            right: 2em;
             height: 40px;
             width: 3em;
+
+            &:hover{
+                cursor: pointer;
+            }
 
             & .bar{
                 position: absolute;
@@ -18,6 +26,12 @@ body{
             }
         }
     
+    }
+    .presentacion{
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
