--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,33 @@
-html {
+body {
   margin: 0;
+  background-color: #1C1B18;
+  color: #F2F1F0;
 }
-
-body header {
+body > div {
+  height: 100vh;
+}
+body > div header {
   height: 25%;
   position: relative;
+  padding: 1em;
 }
-body header .dropdown {
+body > div header .dropdown {
   position: absolute;
   right: 2em;
   height: 40px;
   width: 3em;
 }
-body header .dropdown:hover {
+body > div header .dropdown:hover {
   cursor: pointer;
 }
-body header .dropdown .bar {
+body > div header .dropdown .bar {
   position: absolute;
   width: 100%;
   height: 3px;
-  background-color: black;
+  background-color: #F2F1F0;
   border-radius: 2px;
 }
-body .presentacion {
-  height: 100vh;
+body > div .presentacion {
   display: flex;
   justify-content: center;
   align-items: center;
