--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body > div header .dropdown:hover {
 body > div header .dropdown .bar {
   position: absolute;
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: #F2F1F0;
   border-radius: 2px;
 }
@@ -31,6 +31,17 @@ body > div .presentacion {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+body .sobreMi {
+  border-top: solid #F2F1F0 1px;
+}
+body .sobreMi > h2 {
+  margin-bottom: 0;
+}
+body .sobreMi .subrayado {
+  background-color: #D3643B;
+  height: 2px;
+  width: 8em;
 }
 
 /*# sourceMappingURL=style.css.map */
