cambio en los colores

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,14 @@
 body {
   margin: 0;
-  background-color: #1C1B18;
-  color: #F2F1F0;
 }
 body > div {
   height: 100vh;
+  background-color: #1C1B18;
+  color: #F2F1F0;
 }
 body > div header {
+  background-color: #1C1B18;
+  color: #F2F1F0;
   height: 25%;
   position: relative;
   padding: 1em;
@@ -33,10 +35,12 @@ body > div .presentacion {
   align-items: center;
 }
 body .sobreMi {
-  border-top: solid #F2F1F0 1px;
+  background-color: #F2F1F0;
+  padding-top: 1em;
 }
 body .sobreMi > h2 {
-  margin-bottom: 0;
+  margin: 0;
+  color: #1C1B18;
 }
 body .sobreMi .subrayado {
   background-color: #D3643B;
