--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,16 +1,21 @@
-$backgroundColor: #1C1B18;
-$fontColor: #F2F1F0;
+$backgroundColorPresentacion: #1C1B18;
+$fontColorPresentacion: #F2F1F0;
+$backgroundColor: #F2F1F0;
+$fontColor:#1C1B18;
 $subrayado: #D3643B;
 
 body {
     margin: 0;
-    background-color: $backgroundColor;
-    color: $fontColor;
-
+    
+    
     &>div {
         height: 100vh;
+        background-color: $backgroundColorPresentacion;
+        color: $fontColorPresentacion;
 
         & header {
+            background-color: $backgroundColorPresentacion;
+            color: $fontColorPresentacion;
             height: 25%;
             position: relative;
             padding: 1em;
@@ -29,7 +34,7 @@ body {
                     position: absolute;
                     width: 100%;
                     height: 2px;
-                    background-color: $fontColor;
+                    background-color: $fontColorPresentacion;
                     border-radius: 2px;
                 }
             }
@@ -44,10 +49,12 @@ body {
     }
 
     .sobreMi{
-        border-top: solid $fontColor 1px;
+        background-color: $backgroundColor;
+padding-top: 1em;
 
         & > h2{
-            margin-bottom: 0;
+            margin: 0;
+            color:$fontColor;
         }
 
         & .subrayado{
