--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  color: #1C1B18;
 }
 body > div {
   height: 100vh;
@@ -36,7 +37,7 @@ body > div .presentacion {
 }
 body .sobreMi {
   background-color: #F2F1F0;
-  padding-top: 1em;
+  padding: 1em;
 }
 body .sobreMi > h2 {
   margin: 0;
@@ -46,6 +47,15 @@ body .sobreMi .subrayado {
   background-color: #D3643B;
   height: 2px;
   width: 8em;
+}
+body .sobreMi .cuadroTexto {
+  margin-top: 1em;
+  padding: 1em;
+  box-shadow: 3px 3px 5px 6px #ccc;
+  text-align: justify;
+}
+body .sobreMi .cuadroTexto > p {
+  color: #1C1B18;
 }
 
 /*# sourceMappingURL=style.css.map */
