--- a/styles/style.css
+++ b/styles/style.css
@@ -41,17 +41,25 @@ body .sobreMi {
 }
 body .sobreMi > h2 {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
   color: #1C1B18;
+  padding-bottom: 0.2em;
 }
-body .sobreMi .subrayado {
+body .sobreMi > h2::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: center;
   background-color: #D3643B;
-  height: 2px;
-  width: 8em;
+  height: 3px;
+  width: 5.5em;
 }
 body .sobreMi .cuadroTexto {
   margin-top: 1em;
   padding: 1em;
-  box-shadow: 3px 3px 5px 6px #ccc;
+  box-shadow: 1px 1px 3px 3px #ccc;
   text-align: justify;
 }
 body .sobreMi .cuadroTexto > p {
