--- a/styles/style.css
+++ b/styles/style.css
@@ -1,69 +1,106 @@
 body {
   margin: 0;
-  color: #1C1B18;
 }
 body > div {
   height: 100vh;
   background-color: #1C1B18;
   color: #F2F1F0;
 }
-body > div header {
+body header {
   background-color: #1C1B18;
   color: #F2F1F0;
   height: 25%;
   position: relative;
   padding: 1em;
 }
-body > div header .dropdown {
+body header .dropdown {
   position: absolute;
   right: 2em;
   height: 40px;
   width: 3em;
 }
-body > div header .dropdown:hover {
+body header .dropdown:hover {
   cursor: pointer;
 }
-body > div header .dropdown .bar {
+body header .dropdown .bar {
   position: absolute;
   width: 100%;
   height: 2px;
   background-color: #F2F1F0;
   border-radius: 2px;
 }
-body > div .presentacion {
+body .presentacion {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.5em;
 }
-body .sobreMi {
+
+.sobreMi {
+  padding: 4em 10vw;
+  color: #1C1B18;
   background-color: #F2F1F0;
-  padding: 1em;
+  font-family: "Merriweather", serif;
 }
-body .sobreMi > h2 {
+.sobreMi > h1 {
   margin: 0;
   display: flex;
   justify-content: center;
   position: relative;
+  font-size: 3em;
+  font-family: "Titillium Web", sans-serif;
   color: #1C1B18;
   padding-bottom: 0.2em;
 }
-body .sobreMi > h2::after {
+.sobreMi > h1::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: center;
   background-color: #D3643B;
   height: 3px;
-  width: 5.5em;
 }
-body .sobreMi .cuadroTexto {
-  margin-top: 1em;
+.sobreMi > h1::after {
+  width: 5.3em;
+}
+.sobreMi .cuadroTexto {
+  margin: 5em 0em;
   padding: 1em;
   box-shadow: 1px 1px 3px 3px #ccc;
   text-align: justify;
 }
-body .sobreMi .cuadroTexto > p {
+.sobreMi .cuadroTexto > p {
   color: #1C1B18;
+  font-size: 1.5em;
+}
+
+.tecnologias {
+  padding: 4em 10vw;
+  color: #1C1B18;
+  background-color: #F2F1F0;
+  font-family: "Merriweather", serif;
+  border-top: solid black 1px;
+}
+.tecnologias > h1 {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  font-size: 3em;
+  font-family: "Titillium Web", sans-serif;
+  color: #1C1B18;
+  padding-bottom: 0.2em;
+}
+.tecnologias > h1::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: center;
+  background-color: #D3643B;
+  height: 3px;
+}
+.tecnologias > h1::after {
+  width: 7.5em;
 }
 
 /*# sourceMappingURL=style.css.map */
