--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,7 +4,7 @@ $backgroundColor: #F2F1F0;
 $fontColor:#1C1B18;
 $subrayado: #D3643B;
 
-@mixin titulo {
+@mixin tituloBloque {
     margin: 0;
     display: flex;
     justify-content: center;
@@ -13,129 +13,143 @@ $subrayado: #D3643B;
     font-family: 'Titillium Web', sans-serif;
     color: $fontColor;
     padding-bottom: 0.2em;
-    
-    
-    &::after{
+
+
+    &::after {
         content: "";
         position: absolute;
         bottom: 0;
         left: center;
         background-color: $subrayado;
         height: 3px;
-        
+
     }
 }
 
 @mixin bloque {
-    padding: 4em 10vw ;
-    color:$fontColor;
+    padding: 4em 10vw;
+    color: $fontColor;
     background-color: $backgroundColor;
     font-family: 'Merriweather', serif;
 }
 
+@mixin bloqueTecnologías {
+    box-shadow: 0px 0px 0px 1px #ccc;
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin-bottom: 2em;
+    padding: 1em;
 
+
+    & img {
+        width: 80px;
+        height: 80px;
+        margin: 0 0.2em;
+    }
+}
 
 body {
     margin: 0;
-    
-    
+    position: relative;
+
+
     &>div {
         height: 100vh;
         background-color: $backgroundColorPresentacion;
         color: $fontColorPresentacion;
     }
-        
-        header {
-            background-color: $backgroundColorPresentacion;
-            color: $fontColorPresentacion;
-            height: 25%;
-            position: relative;
-            padding: 1em;
-            
-            & .dropdown {
-                position: absolute;
-                right: 2em;
-                height: 40px;
-                width: 3em;
-                
-                &:hover {
-                    cursor: pointer;
-                }
-                
-                & .bar {
-                    position: absolute;
-                    width: 100%;
-                    height: 2px;
-                    background-color: $fontColorPresentacion;
-                    border-radius: 2px;
-                }
-            }
-            
+
+    & .dropdown {
+        position: fixed;
+        top: 2em;
+        right: 2em;
+        height: 3em;
+        width: 3em;
+        padding: 1em;
+        border-radius: 100%;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(204, 204, 204, 0.5)
+
         }
 
-        .presentacion {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        & .bar {
+            position: absolute;
+            width: 3em;
+            height: 2px;
+            background-color: $fontColorPresentacion;
+            border-radius: 2px;
+        }
+    }
+
+    .presentacion {
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5em;
+    }
+}
+
+.sobreMi {
+    @include bloque;
+
+    &>h1 {
+        @include tituloBloque;
+
+        &::after {
+            width: 5.3em;
+        }
+    }
+
+    & .cuadroTexto {
+        margin: 5em 0em;
+        padding: 1em;
+        box-shadow: 1px 1px 3px 3px #ccc;
+        text-align: justify;
+
+        &>p {
+            color: $fontColor;
             font-size: 1.5em;
         }
     }
-    
-    .sobreMi{
-        @include bloque;
-        
-        & > h1{
-           @include titulo;
-           &::after{
-            width: 5.3em;
-           }
-        }
-            & .cuadroTexto{
-                margin: 5em 0em;
-                padding: 1em;
-                box-shadow: 1px 1px 3px 3px #ccc;
-                text-align: justify;
-                
-                & > p{
-                    color:$fontColor;
-                    font-size: 1.5em;
-                }
-            }
-        }
-    .tecnologias{
-        @include bloque;
-        border-top: solid black 1px;
-        & > h1{
-            @include titulo;
-            &::after{
-                width: 7.5em;
-            }
-        }
-        & .frontend{
-            box-shadow: 1px 1px 3px 3px #ccc;
-            & img{
-                width: 40px;
-                height: 40px;
-            }
-        }
-        & .backend{
-            box-shadow: 1px 1px 3px 3px #ccc;
-            & img{
-                width: 40px;
-                height: 40px;
-            }
-        }
-        & .otros{
-            box-shadow: 1px 1px 3px 3px #ccc;
-            & img{
-                width: 40px;
-                height: 40px;
-            }
+}
+
+.tecnologias {
+    @include bloque;
+    border-top: solid black 1px;
+
+    &>h1 {
+        @include tituloBloque;
+        margin-bottom: 1em;
+
+        &::after {
+            width: 7.5em;
         }
     }
-    
-    // @media(max-width : 600px) {
-    //         .presentacion{
-    //                 font-size: 0.5em;
-    //             }
-    //         }
+
+    &.bloquesTecnologias {
+        display: flex;
+        width: 100%;
+
+    }
+
+    & .frontend {
+        @include bloqueTecnologías;
+    }
+
+    & .backend {
+        @include bloqueTecnologías;
+    }
+
+    & .otros {
+        @include bloqueTecnologías;
+    }
+}
+
+// @media(max-width : 600px) {
+//         .presentacion{
+//                 font-size: 0.5em;
+//             }
+//         }
