--- a/styles/style.scss
+++ b/styles/style.scss
@@ -60,6 +60,12 @@ $subrayado: #D3643B;
             & span {
                 visibility: visible;
             }
+            & img {
+                transition-duration: 0.5s;
+                width: 85px;
+                height: 85px;
+                margin: 0 0.2em 0.2em 0;
+            }
 
         }
         
