--- a/styles/style.scss
+++ b/styles/style.scss
@@ -59,17 +59,19 @@ $subrayado: #D3643B;
 
             & span {
                 visibility: visible;
+                transition: 0.5s ease-in-out;
+
             }
             & img {
-                transition-duration: 0.5s;
-                width: 85px;
-                height: 85px;
+                width: 82px;
+                height: 82px;
                 margin: 0 0.2em 0.2em 0;
             }
-
+            
         }
         
         & img {
+            transition: 0.5s ease-in-out;
             width: 80px;
             height: 80px;
             margin: 0 0.2em 0.2em 0;
@@ -83,7 +85,7 @@ body {
 
 
     &>div {
-        height: 100vh;
+        height: min(100vh);
         background-color: $backgroundColorPresentacion;
         color: $fontColorPresentacion;
     }
