--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,6 @@ body {
   position: relative;
 }
 body > div {
-  height: min(100vh);
   background-color: #1C1B18;
   color: #F2F1F0;
 }
@@ -29,14 +28,15 @@ body .dropdown .bar {
 }
 body .presentacion {
   display: flex;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   align-items: center;
   font-size: 1.5em;
 }
 
 .sobreMi {
-  padding: 4em 10vw;
+  min-height: 100vh;
+  padding: 2em 10vw;
   color: #1C1B18;
   background-color: #F2F1F0;
   font-family: "Merriweather", serif;
@@ -77,7 +77,8 @@ body .presentacion {
 }
 
 .tecnologias {
-  padding: 4em 10vw;
+  min-height: 100vh;
+  padding: 2em 10vw;
   color: #1C1B18;
   background-color: #F2F1F0;
   font-family: "Merriweather", serif;
@@ -115,6 +116,8 @@ body .presentacion {
 .tecnologias .frontend {
   box-shadow: 0px 0px 0px 1px #ccc;
   display: inline-flex;
+  justify-content: space-around;
+  width: 100%;
   flex-wrap: wrap;
   margin-bottom: 2em;
   padding: 1em 1em 0 1em;
@@ -141,7 +144,7 @@ body .presentacion {
   margin: 0 0.2em 0.2em 0;
 }
 .tecnologias .frontend .imagenTecnologia img {
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
   width: 80px;
   height: 80px;
   margin: 0 0.2em 0.2em 0;
@@ -149,6 +152,8 @@ body .presentacion {
 .tecnologias .backend {
   box-shadow: 0px 0px 0px 1px #ccc;
   display: inline-flex;
+  justify-content: space-around;
+  width: 100%;
   flex-wrap: wrap;
   margin-bottom: 2em;
   padding: 1em 1em 0 1em;
@@ -175,7 +180,7 @@ body .presentacion {
   margin: 0 0.2em 0.2em 0;
 }
 .tecnologias .backend .imagenTecnologia img {
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
   width: 80px;
   height: 80px;
   margin: 0 0.2em 0.2em 0;
@@ -183,6 +188,8 @@ body .presentacion {
 .tecnologias .otros {
   box-shadow: 0px 0px 0px 1px #ccc;
   display: inline-flex;
+  justify-content: space-around;
+  width: 100%;
   flex-wrap: wrap;
   margin-bottom: 2em;
   padding: 1em 1em 0 1em;
@@ -209,7 +216,7 @@ body .presentacion {
   margin: 0 0.2em 0.2em 0;
 }
 .tecnologias .otros .imagenTecnologia img {
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
   width: 80px;
   height: 80px;
   margin: 0 0.2em 0.2em 0;
