--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,7 +27,8 @@ $subrayado: #D3643B;
 }
 
 @mixin bloque {
-    padding: 4em 10vw;
+    min-height: 100vh;
+    padding: 2em 10vw;
     color: $fontColor;
     background-color: $backgroundColor;
     font-family: 'Merriweather', serif;
@@ -40,6 +41,8 @@ $subrayado: #D3643B;
 @mixin bloqueTecnologías {
     box-shadow: 0px 0px 0px 1px #ccc;
     display: inline-flex;
+    justify-content: space-around;
+    width: 100%;
     flex-wrap: wrap;
     margin-bottom: 2em;
     padding:1em 1em 0 1em;
@@ -71,7 +74,7 @@ $subrayado: #D3643B;
         }
         
         & img {
-            transition: 0.5s ease-in-out;
+            transition: 0.2s ease-in-out;
             width: 80px;
             height: 80px;
             margin: 0 0.2em 0.2em 0;
@@ -85,7 +88,6 @@ body {
 
 
     &>div {
-        height: min(100vh);
         background-color: $backgroundColorPresentacion;
         color: $fontColorPresentacion;
     }
@@ -115,7 +117,7 @@ body {
 
     .presentacion {
         display: flex;
-        height: 100%;
+        height: 100vh;
         justify-content: center;
         align-items: center;
         font-size: 1.5em;
