--- a/styles/style.scss
+++ b/styles/style.scss
@@ -58,7 +58,7 @@ $subrayado: #D3643B;
         }
 
         &:hover {
-            cursor: pointer;
+            
 
             & span {
                 visibility: visible;
@@ -180,8 +180,8 @@ body {
     }
 }
 
-// @media(max-width : 600px) {
-//         .presentacion{
-//                 font-size: 0.5em;
-//             }
-//         }
+@media(max-width : 600px) {
+        .presentacion{
+                font-size: 0.5em;
+            }
+        }
