--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,11 @@ $backgroundColor: #F2F1F0;
 $fontColor:#1C1B18;
 $subrayado: #D3643B;
 
+*::selection{
+    background-color: rgba(134,184,177,0.5);
+    
+}
+
 @mixin tituloBloque {
     margin: 0;
     display: flex;
