Proyectos a falta de poner proyectos

--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,40 @@ body .presentacion {
   margin: 0 0.2em 0.2em 0;
 }
 
+.misProyectos {
+  min-height: 100vh;
+  padding: 2em 10vw;
+  color: #1C1B18;
+  background-color: #F2F1F0;
+  font-family: "Merriweather", serif;
+  border-top: solid black 1px;
+}
+.misProyectos h3 {
+  font-family: "Titillium Web", sans-serif;
+}
+.misProyectos > h1 {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  font-size: 3em;
+  font-family: "Titillium Web", sans-serif;
+  color: #1C1B18;
+  padding-bottom: 0.2em;
+  margin-bottom: 1em;
+}
+.misProyectos > h1::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: center;
+  background-color: #D3643B;
+  height: 3px;
+}
+.misProyectos > h1::after {
+  width: 7.5em;
+}
+
 @media (max-width: 600px) {
   .presentacion {
     font-size: 0.5em;
