--- a/styles/style.css
+++ b/styles/style.css
@@ -146,7 +146,7 @@ body .presentacion {
   transition: 0.2s ease-in-out;
   width: 80px;
   height: 80px;
-  margin: 0 0.2em 0.2em 0;
+  margin: 0 0.5em 0.5em 0;
 }
 .tecnologias .backend {
   box-shadow: 0px 0px 0px 1px #ccc;
@@ -179,7 +179,7 @@ body .presentacion {
   transition: 0.2s ease-in-out;
   width: 80px;
   height: 80px;
-  margin: 0 0.2em 0.2em 0;
+  margin: 0 0.5em 0.5em 0;
 }
 .tecnologias .otros {
   box-shadow: 0px 0px 0px 1px #ccc;
@@ -212,7 +212,7 @@ body .presentacion {
   transition: 0.2s ease-in-out;
   width: 80px;
   height: 80px;
-  margin: 0 0.2em 0.2em 0;
+  margin: 0 0.5em 0.5em 0;
 }
 
 .misProyectos {
@@ -248,9 +248,34 @@ body .presentacion {
   width: 7.5em;
 }
 
+footer {
+  background-color: #1C1B18;
+  color: #F2F1F0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 3em 3em 3em;
+}
+footer h2 {
+  text-align: center;
+  font-family: "Titillium Web", sans-serif;
+}
+footer .contacto {
+  display: flex;
+  justify-content: space-around;
+}
+footer .contacto img:not(.email) {
+  width: 80px;
+  height: 80px;
+}
+footer .contacto .email {
+  width: 73px;
+  height: 73px;
+}
+
 @media (max-width: 600px) {
   .presentacion {
-    font-size: 0.5em;
+    font-size: 90%;
   }
 }
 
