--- a/styles/style.scss
+++ b/styles/style.scss
@@ -89,6 +89,7 @@ $subrayado: #D3643B;
 body {
     margin: 0;
     position: relative;
+    width: 100vw;
 
 
     &>div {
@@ -229,9 +230,7 @@ footer{
 }
 
 @media(max-width : 600px) {
-        .dropdown{
-            margin-left: 1em;
-        }
+      
         .textoPresentacion{
                 font-size: 0.75em;
             }
