--- a/styles/style.css
+++ b/styles/style.css
@@ -19,12 +19,13 @@ body header > div {
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 body header > div .dropdown {
   right: 1em;
   height: 3em;
   width: 3em;
-  padding: 0.5em;
+  padding: 0.7em;
 }
 body header > div .dropdown:hover {
   cursor: pointer;
