--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@ $fontColorPresentacion: #F2F1F0;
 $backgroundColor: #F2F1F0;
 $fontColor:#1C1B18;
 $subrayado: #D3643B;
+$font : 'Titillium Web', sans-serif;
 
 *::selection{
     background-color: rgba(134,184,177,0.5);
@@ -15,7 +16,6 @@ $subrayado: #D3643B;
     justify-content: center;
     position: relative;
     font-size: 3em;
-    // font-family: 'Titillium Web', sans-serif;
     color: $fontColor;
     padding-bottom: 0.2em;
 
@@ -36,9 +36,9 @@ $subrayado: #D3643B;
     padding: 2em 10vw;
     color: $fontColor;
     background-color: $backgroundColor;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: $font;
     & h3 {
-        font-family: 'Titillium Web', sans-serif;
+        font-family: $font;
     }
 }
 
@@ -57,7 +57,7 @@ $subrayado: #D3643B;
         text-align: center;
         & span {
             visibility: hidden;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: $font;
 
         }
 
@@ -88,6 +88,7 @@ $subrayado: #D3643B;
 
 body {
     margin: 0;
+    position: relative;
 
 
     &>div {
@@ -96,11 +97,13 @@ body {
     }
 
     & header{
+        position: relative;
         width: 100%;
+        height:70px;
         position: fixed;
         background-color: rgba(134,184,177,0.2);
 
-        & > div {
+        &  .dropdownContainer {
             height: 4.5em;
             width:100%;
             display: flex;
@@ -108,14 +111,12 @@ body {
             align-items: center;
 
         & .dropdown {
-            
             right: 1em;
             height: 3em;
             width: 3em;
             padding: 0.7em;
             
             & .bar {
-                position: absolute;
                 width: 3em;
                 height: 2px;
                 background-color: $fontColorPresentacion;
@@ -131,6 +132,38 @@ body {
     
     }
     }
+     .dropdownMenu{
+        list-style: none;
+        position: absolute;
+        right: 0;
+        top: 0;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1em 0;
+        width: 15em;
+        background-color: rgba(177, 173, 160, 0.87);
+        & li{
+            padding-left: 1em;
+            padding-bottom: 1em;
+            width: 100%;
+        }
+        &li :not(.cerrar){
+            border-bottom: $fontColor solid 1px;
+        }
+
+         & a{
+         text-decoration: none;
+         font: $font;
+         font-size: 1.2em;
+         color: $fontColor;
+        }
+         & .cerrar {
+             height: 15px;
+             width: 20px;
+             align-self: center;
+         }
+     }
 
 
     .presentacion {
