--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,11 +3,12 @@ $fontColorPresentacion: #F2F1F0;
 $backgroundColor: #F2F1F0;
 $fontColor:#1C1B18;
 $subrayado: #D3643B;
-$font : 'Titillium Web', sans-serif;
+$font : 'Titillium Web',
+sans-serif;
 
-*::selection{
-    background-color: rgba(134,184,177,0.5);
-    
+*::selection {
+    background-color: rgba(134, 184, 177, 0.5);
+
 }
 
 @mixin tituloBloque {
@@ -37,6 +38,7 @@ $font : 'Titillium Web', sans-serif;
     color: $fontColor;
     background-color: $backgroundColor;
     font-family: $font;
+
     & h3 {
         font-family: $font;
     }
@@ -49,12 +51,13 @@ $font : 'Titillium Web', sans-serif;
     width: 100%;
     flex-wrap: wrap;
     margin-bottom: 2em;
-    padding:1em 1em 0 1em;
+    padding: 1em 1em 0 1em;
 
     & .imagenTecnologia {
         display: flex;
         flex-direction: column;
         text-align: center;
+
         & span {
             visibility: hidden;
             font-family: $font;
@@ -62,21 +65,22 @@ $font : 'Titillium Web', sans-serif;
         }
 
         &:hover {
-            
+
 
             & span {
                 visibility: visible;
                 transition: 0.5s ease-in-out;
 
             }
-            & img{
+
+            & img {
                 width: 82px;
                 height: 82px;
                 margin: 0 0.2em 0.2em 0;
             }
-            
+
         }
-        
+
         & img {
             transition: 0.2s ease-in-out;
             width: 80px;
@@ -96,43 +100,44 @@ body {
         color: $fontColorPresentacion;
     }
 
-    & header{
+    & header {
         position: relative;
         width: 100%;
-        height:70px;
+        height: 70px;
         position: fixed;
-        background-color: rgba(134,184,177,0.2);
+        background-color: rgba(134, 184, 177, 0.2);
 
-        &  .dropdownContainer {
+        & .dropdownContainer {
             height: 4.5em;
-            width:100%;
+            width: 100%;
             display: flex;
             justify-content: flex-end;
             align-items: center;
 
-        & .dropdown {
-            right: 1em;
-            height: 3em;
-            width: 3em;
-            padding: 0.7em;
-            
-            & .bar {
+            & .dropdown {
+                right: 1em;
+                height: 3em;
                 width: 3em;
-                height: 2px;
-                background-color: $fontColorPresentacion;
-                border-radius: 2px;
+                padding: 0.7em;
+
+                & .bar {
+                    width: 3em;
+                    height: 2px;
+                    background-color: $fontColorPresentacion;
+                    border-radius: 2px;
+                }
+
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: rgba(204, 204, 204, 0.5)
+                }
             }
-           
-            
-            &:hover {
-                cursor: pointer;
-                background-color: rgba(204, 204, 204, 0.5)
-            }
+
         }
-    
     }
-    }
-     .dropdownMenu{
+
+    .dropdownMenu {
         list-style: none;
         position: absolute;
         right: 0;
@@ -140,30 +145,46 @@ body {
         display: inline-flex;
         flex-direction: column;
         align-items: flex-start;
-        padding: 1em 0;
         width: 15em;
         background-color: rgba(177, 173, 160, 0.87);
-        & li{
-            padding-left: 1em;
+
+        & li {
             padding-bottom: 1em;
+            padding-top: 0.5em;
             width: 100%;
-        }
-        &li :not(.cerrar){
-            border-bottom: $fontColor solid 1px;
+
+            & :hover {
+                background-color: rgba(144, 141, 131, 0.87);
+            }
         }
 
-         & a{
-         text-decoration: none;
-         font: $font;
-         font-size: 1.2em;
-         color: $fontColor;
+        & li:not(.cerrarContainer) {
+            padding-left: 1em;
         }
-         & .cerrar {
-             height: 15px;
-             width: 20px;
-             align-self: center;
-         }
-     }
+           & li{ border-bottom: $fontColor solid 1px;
+           }
+        & .cerrarContainer :hover{
+            cursor: pointer;
+        }
+        & a {
+            font: $font;
+            text-decoration: none;
+            font-size: 1.2em;
+            color: $fontColor;
+        }
+
+        .cerrarContainer {
+            display: flex;
+            justify-content: center;
+
+            & .cerrar {
+                height: 15px;
+                width: 20px;
+                align-self: center;
+            }
+        }
+
+    }
 
 
     .presentacion {
@@ -231,7 +252,7 @@ body {
     }
 }
 
-.misProyectos{
+.misProyectos {
     @include bloque;
     border-top: solid black 1px;
 
@@ -245,7 +266,7 @@ body {
     }
 }
 
-footer{
+footer {
     background-color: $backgroundColorPresentacion;
     color: $fontColorPresentacion;
     display: flex;
@@ -253,21 +274,23 @@ footer{
     justify-content: center;
     padding: 0 3em 3em 3em;
 
-    & h2{
+    & h2 {
         text-align: center;
         font-family: 'Titillium Web', sans-serif;
 
     }
-    & .contacto{
+
+    & .contacto {
         display: flex;
         justify-content: space-around;
 
 
-        & img:not(.email){
+        & img:not(.email) {
             width: 80px;
             height: 80px;
         }
-        & .email{
+
+        & .email {
             width: 73px;
             height: 73px;
         }
@@ -276,14 +299,14 @@ footer{
 }
 
 @media(max-width : 600px) {
-      
-        .textoPresentacion{
-                font-size: 0.75em;
-            }
-        }
 
-        @media(max-width : 450px) {
-            .textoPresentacion{
-                    font-size: 0.6em;
-                }
-            }
+    .textoPresentacion {
+        font-size: 0.75em;
+    }
+}
+
+@media(max-width : 450px) {
+    .textoPresentacion {
+        font-size: 0.6em;
+    }
+}
